--- a/style.css
+++ b/style.css
@@ -2,11 +2,18 @@
     :root {
         --cont-width: 100vw;
     }
+    #tt{
+        font-size: 9vw;
+    }
+        
 }
 
 @media screen and (min-width:520px){
     :root {
         --cont-width: max(36vw, 520px);
+    }
+    #tt{
+        font-size: 46.8px;
     }
 }
 
@@ -51,7 +58,7 @@ a:visited {
     width: 6em;
 }
 
-.btn, #cont, footer{
+.btn, #cont, #aboutCont, footer, #about{
     text-align: center;
 }
 
@@ -96,7 +103,7 @@ html, body{
 }
 
 #cont{
-    min-height: 100vh; /* set height as you need */
+    min-height: 100vh; 
     display: flex;
     flex-direction: column;
     background-color: #fff;
@@ -119,7 +126,7 @@ html, body{
 }
 
 #tt{
-    font-size: calc(var(--cont-width) * 0.09);
+    
     font-weight: 630;
     
     margin: 4vh auto 2.7vh 8.4%;
@@ -160,7 +167,7 @@ html, body{
 
 footer {
     margin-top: auto;
-
+    font-size: 16px;
     margin-bottom: 2vh;
 }
 
@@ -188,4 +195,37 @@ svg {
     -webkit-box-shadow: inset 0 0 5px rgba(0,0,0,0.2);
     border-radius: 10px;
     background: #EDEDED;
+}
+
+#aboutCont{
+    width: var(--cont-width);
+    top: 0px;
+    left: 0;
+    right:0;
+    height: 100vh;
+    margin: 0 auto;
+    position: fixed;
+    background-color: rgba(0, 0, 0, 0.6);
+    display: none;
+}
+
+#about{
+    width: var(--cont-width);
+    height: auto;
+    position: absolute;
+    margin: 0 auto;
+    top: 50%;
+    left: 50%;
+    background-color: #fff;
+    border-radius: 1em;
+    transform:translate(-50%,-50%);
+}
+
+#about > img{
+    width: calc(var(--cont-width)*0.72);
+    margin-bottom: 1em;
+}
+
+#abbtn:hover{
+    cursor: pointer;
 }
