--- a/mob.css
+++ b/mob.css
@@ -20,8 +20,8 @@ a:visited {
 }
 
 .in, .orow{
-    padding: 1.5vh 1.5vw 1.5vh 1.5vw;
-    font-size: 3.3vh;
+    padding: 0.48em 1.5vw 0.48em 1.5vw;
+    font-size: 1.5em;
     font-weight: 480;
     text-align: left;
     position: relative;;
@@ -42,7 +42,7 @@ a:visited {
 
 .inTitile{
     position: absolute;
-    top: 0.18em;
+    top: 0.24em;
     display: inline-block;
     width: 6em;
 }
@@ -66,12 +66,12 @@ a:visited {
     display: inline-block;
     vertical-align: middle;
     text-align: left;
-    padding: 0.6vh;
+    padding: 0.3em;
 }
 
 .btn > p{
-    font-size: 3.6vh;
-    padding: 1.5vh;
+    font-size: 1.8em;
+    padding: 0.3em;
     font-weight: 500;
 }
 
@@ -157,7 +157,7 @@ html, body{
 footer {
     margin-top: auto;
     font-size: 16px;
-    margin-bottom: 2vh;
+    margin-bottom: 1em;
 }
 
 svg {
@@ -208,11 +208,17 @@ svg {
     background-color: #fff;
     border-radius: 1em;
     transform:translate(-50%,-50%);
+    
+}
+
+#about > p{
+    font-size: 1.5em;
+    margin: 0.6em;
 }
 
 #about > img{
     width: calc(var(--cont-width)*0.72);
-    margin-bottom: 1em;
+    margin-bottom: 1.8em;
 }
 
 #abbtn:hover{
